# tg_auth_bot

./: .env_example  README.md  pyproject.toml
tg_auth_bot/: app.py
